--- a/hotels-service/src/main/resources/application.properties
+++ b/hotels-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=hotels-service
+server.port=8081
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
