--- a/hotels-service/src/main/resources/application.properties
+++ b/hotels-service/src/main/resources/application.properties
@@ -2,5 +2,7 @@ spring.application.name=hotels-service
 server.port=8081
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.datasource.password=admin
+spring.datasource.username=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
